--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 game/1dMZY4mHP3jt/WebGL/Build/WebGL.data filter=lfs diff=lfs merge=lfs -text
+game/1dMZY4mHP3jt/WebGL/Build/WebGL.data.unityweb filter=lfs diff=lfs merge=lfs -text
